feat: initialize clustered Node.js backend with Socket.io, Redis, and MongoDB integration.

--- a/swiftbid-backend/.env
+++ b/swiftbid-backend/.env
@@ -3,3 +3,6 @@ PORT=3000
 
 # Database configuration
 MONGO_URI=mongodb://localhost:27017/swiftbid
+
+# Redis configuration
+REDIS_URL=redis://localhost:6379
