--- a/swiftbid-backend/package.json
+++ b/swiftbid-backend/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@socket.io/redis-adapter": "^8.3.0",
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.2.1",
+    "redis": "^5.11.0",
     "socket.io": "^4.8.3"
   },
   "devDependencies": {
